[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6.3", features = ["serde"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "34398dc" }
alloy-sol-types = "0.6.3"
anyhow = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "ee06628" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
