[package]
name = "provider_dao_router"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6.4", features = ["serde"] }
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
